# crewai-assignment-planner

./: .gitignore  README.md
assignment_planner_baseline_0/: README.md  pyproject.toml
assignment_planner_baseline_0/output/: assignment_guidance.md  report.md
assignment_planner_baseline_0/src/assignment_planner_baseline_0/: crew.py  main.py
assignment_planner_baseline_0/src/assignment_planner_baseline_0/config/: agents.yaml  tasks.yaml
assignment_planner_baseline_1/: README.md  pyproject.toml
assignment_planner_baseline_1/output/: report.md
assignment_planner_baseline_1/src/assignment_planner_baseline_1/: crew.py  main.py
assignment_planner_baseline_1/src/assignment_planner_baseline_1/config/: tasks.yaml
assignment_planner_baseline_2/: README.md  pyproject.toml
assignment_planner_baseline_2/src/assignment_planner_baseline_2/: crew.py  main.py
assignment_planner_baseline_2/src/assignment_planner_baseline_2/config/: tasks.yaml
assignment_planner_baseline_3/: README.md  pyproject.toml
assignment_planner_baseline_3/output/: report.md
assignment_planner_baseline_3/src/assignment_planner_baseline_3/: crew.py  main.py  models.py
assignment_planner_baseline_3/src/assignment_planner_baseline_3/config/: agents.yaml
docs/diagrams/: hierarchical.md  sequential.md
results/baseline_0/: cost_summary.md  notes.md
results/baseline_0/output/: analysis.md
results/baseline_1/: cost_summary.md  notes.md
results/baseline_1/output/: analysis.md  assignment_guidance.md
results/baseline_2/: cost_summary.md  notes.md
results/baseline_2/output/: analysis.md  assignment_guidance.md  report.md
results/baseline_3/: cost_summary.md  notes.md
results/baseline_3/output/: analysis.md  assignment_guidance.md
